--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 This is a simple prototype that I created a while ago. I might return to this, but probably not.
+This project is obviously in a terrible state, and that's because I was very early into my coding journey when I made this.
